test/errors/error39.vult
fun foo () {
  return 1;
}

fun foo() {
  return 1;
}